# funcx-openfold

./: .gitignore  Makefile  README.md  cli.py  setup.cfg
funcx_openfold/: __init__.py  cli.py  utils.py
requirements/: dev.txt  requirements.txt
