[metadata]
name = funcx_openfold
version = attr: funcx_openfold.__version__
description = FuncX OpenFold interface.
long_description = file:README.md
long_description_content_type=text/markdown

url = https://github.com/ramanathanlab/funcx-openfold
author = Alexander Brace, Maxim Zvyagin, Arvind Ramanathan
author_email = ramanathana@anl.gov

[options]
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    funcx-openfold = funcx_openfold.cli:main

[options.packages.find]
exclude =
    test
    docs

[flake8] 
exclude = .git
max-line-length = 118
extend-ignore = E203,W503,E501,E302,E231
max-complexity = 14

[tool:pytest]
# https://docs.pytest.org/en/stable/customize.html
addopts = -x
junit_family=xunit1
filterwarnings =
    ignore::DeprecationWarning

[mypy]
show_error_codes = True
check_untyped_defs = True
follow_imports = normal
strict_optional = True
plugins = pydantic.mypy
strict = True
disallow_untyped_defs = True

[mypy-funcx.*]
ignore_missing_imports = True
